<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:keepScreenOn="true"
    tools:context=".ContinueActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/banner_container"
        android:orientation="vertical"
        android:weightSum="1">


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:fontFamily="@font/ubuntu_light"
            android:gravity="center"
            android:text="@string/app_name"
            android:textColor="@color/fcolor"
            android:textSize="30sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/msg"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/ubuntu_light"
            android:gravity="center"
            android:text="@string/checking_connection"
            android:textColor="@color/tcolor"
            android:textSize="18sp"
            android:textStyle="bold" />

        <com.github.ybq.android.spinkit.SpinKitView
            android:id="@+id/spinKit"
            style="@style/SpinKitView.Large.Circle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            app:SpinKit_Color="@color/fcolor" />


        <TextView
            android:id="@+id/btnStart"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="40dp"
            android:background="@drawable/green_for_btn"
            android:fontFamily="@font/ubuntu_light"
            android:gravity="center"
            android:padding="10dp"
            android:text="Continue"
            android:textColor="@color/scolor"
            android:textSize="30sp"
            android:textStyle="bold"
            android:visibility="gone" />

        <com.google.android.gms.ads.AdView
            xmlns:ads="http://schemas.android.com/apk/res-auto"
            android:id="@+id/adView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            ads:adSize="SMART_BANNER"
            ads:adUnitId="@string/banner_manual">
        </com.google.android.gms.ads.AdView>


    </LinearLayout>
    <include layout="@layout/lay_banner_ad" />
</RelativeLayout>